--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,12 @@
 // Specific CSS for your home-page
+.background-cover {
+  background-color: #dae1e7;
+  background-size: cover;
+  background-position: cover;
+}
+
+.container-home {
+
+  width: 900px;
+  min-height: 880px;
+}
