--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,7 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$dark-blue: #00005c;
+$purple: #6a097d;
+$mauve: #c060a1;
+$cream: #ffdcb4;
