--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,16 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
 
+<div class="background-cover">
+  <div class="container-home mx-auto row justify-content-center">
 
-<h1>Hello</h1>
+    <div class="row justify-content-center">
+      <div class="col text-center py-5">
+        <h1>Timetracker</h1>
+
+        <p> Happiness is not a feeling but a practice </p>
+        <p>~Aristotle</p>
+
+        <h2><%= link_to "Goals", goals_path %> </h2>
+      </div>
+    </div>
+  </div>
+</div>
